fixed alignment

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -202,7 +202,7 @@ input {
     height: 30px;
     bottom: 20px;
     left: calc(50% + 25px);
-    transform: translateX(-50%);
+    transform: translateX(calc(-50% + 10px));
     outline: none;
     font-size: 16px;
     font-family: inherit;
